! -> Note

16-Jun-2010 Christophe Demko
 # Fixed issue [#20941] incorrect selection after creating user account (Rune Sjøen)
 ^ Reformatting docblock comments

16-Jun-2010 Jean-Marie Simonet
$ [#21011] [patch] JERROR_NOLOGIN_BLOCKED on front end. Thanks Michael.
# [#20882] banner module count field accepts negative numbers. Thanks Elin.
# [#21014] JHtmlSlider library is buggy. Thanks Christophe.

15-Jun-2010 Mark Dexter
# Update version information to beta3
# Fix problem with hard-coding table prefix in sample data (Elin Waring)
# [#21025] Fix problem with hard-coding table prefix in update scripts

15-Jun-2010 Jean-Marie Simonet
$# Correcting a key/string
# [#20944] Cannot create new user - IE8. Thanks Christophe.
#$ [#21018] Adding lang field in submit weblink. 
#+[#21006] Error in modal css template. Thanks Christophe

15-Jun-2010 Christophe Demko
 $ Correcting string in com_languages
 $ Correcting strings in installation files

-------------------- 1.6.0 Beta3 Release [14-Jun-2010] ------------------

14-Jun-2010 Jean-Marie Simonet
[#21007] Alias in list views does not support RTL. Thanks Andrew.
$ Consolidated "Alias" value.
$ Consolidating for RTL support the Filter string/value in back-end
$ Consolidated "Description" value + some.
# [#20979] single contact - enable show contact list. Thanks Tim.

14-Jun-2010 Mark Dexter
 # [#21008] Hide new login button just introduced to login screen
 # [#20529] User-Profile Plugin field settings ignored
 # [#20625] Submit a web link -save error [strict]

14-Jun-2010 Andrew Eddie
 # Fixed issue [#20884] banner manager export not working fatal error (Rob Joyce, Phil Snell).

13-Jun-2010 Ron Severdia
^ Fixed select user button (Thanks Tim Plummer)
# Reverting BlueStork error.php changes from previous commit. Will break until params bug is fixed.
^ Relocate note & language fields to panel in Category & Article Manager (Thanks Tim Plummer)
# News feed language fixes
# Fixed template params in error.php (reverted until fixed)