@@ -35,6 +35,7 @@ $ -> Language fix or change
 $ [#21011] [patch] JERROR_NOLOGIN_BLOCKED on front end. Thanks Michael.
 # [#20882] banner module count field accepts negative numbers. Thanks Elin.
 # [#21014] JHtmlSlider library is buggy. Thanks Christophe.
+# [#21030] Well formed error in com_installer. Thanks Christophe and Rouven.
 
 15-Jun-2010 Mark Dexter
 # Update version information to beta3
